kubectl/apache/apache-ing.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache
  namespace: demo
  annotations:
    cert-manager.io/cluster-issuer: my-issuer
spec:
  tls:
  - hosts:
      - example.com
    secretName: apache-tls
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache
            port:
              number: 80
